==> Fuwaki/Xindabei_v2/Core/Src/ADS1220.c <==
#include "ADS1220.h"

void ADS1220AssertCS( int fAssert)
{
	HAL_GPIO_WritePin(ADS1220_CS_GPIO_PORT, ADS1220_CS_PIN,
					  fAssert ? GPIO_PIN_RESET : GPIO_PIN_SET);
}

void ADS1220SendByte(unsigned char Byte)
{
	HAL_SPI_Transmit(ADS1220_SPI_HANDLE, &Byte, 1U, ADS1220_SPI_TIMEOUT);
}

unsigned char ADS1220ReceiveByte(void)
{
	uint8_t tx = 0xffU;
	uint8_t rx = 0U;

	HAL_SPI_TransmitReceive(ADS1220_SPI_HANDLE, &tx, &rx, 1U, ADS1220_SPI_TIMEOUT);

	return rx;
}
