==> Donkey-Hash/-/0429重新/nanoWAys20240724改单片机+测润泽/Bsp/src/ADS1220.c <==
#include "ADS1220.h"
#include "leddef.h"
#include "STMcalendar.h"

void ADS1220AssertCS(bool fAssert)
{
	if (fAssert)
	{
		SEL_ADC
	}
	else
	{
		DIS_ADC
	}
}

void ADS1220SendByte(unsigned char TxData)
{
	retry = 0;
	//  = 0;
	/* Check if Tx buffer is empty */
	while (LL_SPI_IsActiveFlag_TXE(SPI2) == 0x00)
	{
		retry++;
		if (retry > 20000)
			return;
	}
	retry1 = retry;

	/* Write character in Data register.
	TXE flag is cleared by reading data in DR register */
	LL_SPI_TransmitData8(SPI2, TxData);
	retry = 0;

	/* Check if Rx buffer is not empty */
	while (LL_SPI_IsActiveFlag_RXNE(SPI2) == 0x00)
	{
		retry++;
		if (retry > 20000)
			return;
	}
	retry2 = retry;
	LL_SPI_ReceiveData8(SPI2);
}

unsigned char ADS1220ReceiveByte(uint8_t TxData)
{
	//	uint16_t retry = 0;
	retry = 0;
	// retry3 = 0;
	/* Check if Tx buffer is empty */
	while (LL_SPI_IsActiveFlag_TXE(SPI2) == 0x00)
	{
		retry++;
		if (retry > 20000)
			return 0;
	}
	retry3 = retry;
	/* Write character in Data register.
	TXE flag is cleared by reading data in DR register */
	LL_SPI_TransmitData8(SPI2, TxData);
	retry = 0;

	/* Check if Rx buffer is not empty */
	while (LL_SPI_IsActiveFlag_RXNE(SPI2) == 0x00)
	{
		retry++;
		if (retry > 20000)
			return 0;
	}
	retry4 = retry;
	/* received byte from SPI lines. */
	return LL_SPI_ReceiveData8(SPI2);
}
